@@ -1,3 +1,7 @@
+2007-06-28  Satoshi Nakagawa <artension@gmail.com>
+
+	Improved convert_to_ruby_obj in userdefaultsaccess.rb.
+
 2007-06-27  Satoshi Nakagawa <artension@gmail.com>
 
 	Changed type encoding of BOOL from 'i' to 'c' for objc_method.
